<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/impostazioni_titolo"
        android:layout_centerHorizontal="true"
        style="@style/TextStyle.Heading"
        android:id="@+id/titoloImpostazioni"
        android:layout_margin="50dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/titoloImpostazioni"
        android:id="@+id/rigaNotifiche"
        android:layout_margin="20dp"
        >

        <TextView
            style="@style/TextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/notifiche"
            android:textSize="18sp" />

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="true"
            android:layout_alignParentEnd="true"/>
    </RelativeLayout>

    <TextView
        style="@style/TextStyle.Clickable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/rigaNotifiche"
        android:layout_alignLeft="@id/rigaNotifiche"
        android:onClick="esciCliccato"
        android:text="@string/esci" />
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/bottom_bar"
        app:itemIconTint="@color/black_effective"
        app:itemTextColor="@color/black_effective"
        app:menu="@menu/bottom_nav" />
</RelativeLayout>